<resources>
    <string name="app_name">SpectreCar</string>
    <string name="logout">Logout</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="permission_for_storage">This app needs access to your storage so you can take pictures.</string>
    <string name="permission">It seems that some permission of %1$s has not granted. Please give the required permission to enjoy %1$s features.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_registered_please">Not Registered? Please</string>
    <string name="forget_pin">Forget Password?</string>
    <string name="car_specification">Car Specification</string>
    <string name="buyer_details">Buyer\'s Details</string>
    <string name="vendor_detail">Vendor\'s Detail</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_id">Email Id:</string>
    <string name="contact">Contact:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="address_">Address:</string>
    <string name="name">Name</string>
    <string name="nameempty">Please Enter First Name</string>
    <string name="emailempty">Please Enter Email</string>
    <string name="phoneempty">Please Enter Phone</string>
    <string name="user_type">User Type</string>
    <string name="name_">Name:</string>
    <string name="mobile_no">Contact</string>
    <string name="con_password">Confirm Password</string>
    <string name="txt_term">I agree to Spectre\'s Terms &amp; Conditions.</string>
    <string name="alphabets_only">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="numeric0123456789">0123456789</string>
    <string name="show_interest">I\'m Interested</string>
    <string name="request_service">Request Service</string>
    <string name="request_service_">Service Requested</string>
    <string name="interest">Interested</string>
    <string name="add_review">Add Your Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="add_banner">EDIT</string>
    <string name="review_hint">Tip: Include any details that would be helpful to others. Remember, your review has to be 140 characters long!</string>
    <string name="rate_review">Rate &amp; Review</string>
    <string name="enter_valid_name">Please Enter Valid Name</string>
    <string name="Enter_valid_mail">Please Enter Valid Email</string>
    <string name="enter_valid_pin">Please Enter Valid Password</string>
    <string name="enter_valid_cpin">Please Enter Valid Confirm Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="pin_does_not_match">Password does not matched</string>
    <string name="please_enter_mobile_no">Please Enter Valid Mobile Number</string>
    <string name="please_enter_address">Please Enter Valid Address</string>
    <string name="something_wrong">Something went wrong, please try again later.</string>
    <string name="connection">Please check your internet connection.</string>
    <string name="empty_image">Add at least one photo of your car</string>
    <string name="empty_before_image">Add at least one previous picture of car</string>
    <string name="empty_after_image">Add at least one current picture of car</string>
    <string name="previous_current">Add at least one photo of your car</string>
    <string name="pls_select_cname">Please Select Brand/Car Name</string>
    <string name="loading">Please wait while loading images</string>
    <string name="pls_select_location">Please select location</string>
    <string name="loading_work">Please wait while loading %1$s</string>
    <string name="image_should_be_same">Number of images in previous car pictures &amp; current car pictures should be same</string>
    <string name="pls_select_cmodel">Please Select Car Model</string>
    <string name="pls_select_cversion">Please Select Version</string>
    <string name="pls_select_cyear">Please Select Year</string>
    <string name="pls_select_ctype">Please Select Car Type</string>
    <string name="pls_select_toyear">Please Select To Date</string>
    <string name="pls_select_fromtype">Please Select From Date</string>
    <string name="pls_select_cColor">Please Select Color</string>
    <string name="pls_select_cMileage">Please Enter Mileage</string>
    <string name="pls_select_cPrice">Please Enter Price</string>
    <string name="pls_select_cCondition">Please Enter Car Condition</string>
    <string name="pls_select_desc">Please Enter Car\'s Condition</string>
    <string name="invalid_date">This vehicle is not available for selected date</string>
    <string name="date_validation">Invalid date range selection, To date, should be greater than From date.</string>
    <string name="rent_validation">Invalid date range selection, Drop off date, should be greater than Pick up date.</string>
    <string name="na">NA</string>
    <string name="dollar">AED</string>
    <string name="model_">Model:</string>
    <string name="car_series">Car Series : </string>
    <string name="car_version">Car Vestion : </string>
    <string name="car_type_">Car Type:</string>
    <string name="Mileage">Mileage:</string>
    <string name="post_date">Posted On:</string>
    <string name="inactive">De Activate</string>
    <string name="active">Activate</string>
    <string name="delete">Delete</string>
    <string name="price_vendor">Price-</string>
    <string name="seller_detail">Seller\'s Detail</string>
    <string name="users_detail">User\'s Detail</string>
    <string name="owner_detail">Owner\'s Detail</string>
    <string name="gallery">Gallery</string>
    <string name="review">Reviews</string>
    <string name="view_more">View More</string>
    <string name="from_">From:</string>
    <string name="to_">To:</string>
    <string name="a_from">Available From:</string>
    <string name="a_to">Available To:</string>
    <string name="_car_modified">Car Modified:</string>
    <string name="problem_">Problem:</string>
    <string name="Reset">Reset</string>
    <string name="Done">Done</string>
    <string name="no_review">Oops! No Review available.Be the first one to add review here.</string>
    <string name="no_work">Work history not available.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="mobile_email">Mobile Number/Email Address</string>
    <string name="password_count">Password must be at least 6 characters long</string>
    <string name="con_password_count">Confirm Password must be at least 6 characters long</string>
    <string name="version_">We have made some changes in the app to improve your <b>%1$s</b> experience. Please update the app to proceed.</string>
    <string name="maintenance"><b>%1$s</b> is currently down for maintenance and should be back soon.</string>
    <string name="verify_number">We are texting you an OTP on your mobile number <b>%1$s</b></string>
    <string name="Current_pin">Current Password</string>
    <string name="new_pin">New Password</string>
    <string name="confirm_new_pin">Confirm New Password</string>
    <string name="msg">We have sent verification code on %1$s</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_car_name">Enter Brand/Car Name</string>
    <string name="enter_model">Enter Model Name</string>
    <string name="enter_version">Enter Model Version</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_mileage">Enter Mileage</string>
    <string name="enter_problem">Enter Problem</string>
    <string name="pls_enter_problem">Please Enter Problem</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_car_condition">Enter Car\'s Condition</string>
    <string name="price">Price (AED)</string>
    <string-array name="car_price">
        <item>Price Upto</item>
        <item>10000 AED</item>
        <item>10000 AED</item>
        <item>20000 AED</item>
        <item>30000 AED</item>
        <item>40000 AED</item>
        <item>50000 AED</item>
        <item>60000 AED</item>
        <item>90000 AED</item>
        <item>150000+ AED</item>
    </string-array>
    <string name="price_">Price</string>
    <string name="price_perday">Price per day</string>
    <string name="price_rent">Price (AED/Day)</string>
    <string name="price_upto">Price Upto</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="year_from">Year From</string>
    <string name="year_to">Year To</string>
    <string name="select_to">Select To</string>
    <string name="select_from">Select From</string>
    <string name="select_a_to">Select Available To</string>
    <string name="select_a_from">Select Available From</string>
    <string name="pick_up_date">Pick Up Date</string>
    <string name="select_pick_up_date">Select Pick Up Date</string>
    <string name="drop_off_date">Drop Off Date</string>
    <string name="select_drop_off_date">Select Drop Off Date</string>
    <string name="car_name">Brand/Car Name</string>
    <string name="before_image">Car Previous Pictures</string>
    <string name="data_not_avail">Data not available</string>
    <string name="after_image">Car Current Pictures</string>
    <string name="any_brand">Any Brand</string>
    <string name="any_model">Any Model</string>
    <string name="any_version">Any Version</string>
    <string name="any_year">Any Year</string>
    <string name="any_price">Any Price</string>
    <string name="any_color">Any Color</string>
    <string name="any_type">Any Type</string>
    <string name="filter">Filter</string>
    <string name="model">Model</string>
    <string name="version">Version</string>
    <string-array name="year">
        <item>Any Type</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
    </string-array>
    <string-array name="car_type">
        <item>Any Type</item>
        <item>4x4</item>
        <item>Convertible</item>
        <item>Family</item>
        <item>Luxury</item>
        <item>Sports</item>
        <item>Supercar</item>
        <item>Tuner</item>
        <item>Other</item>
    </string-array>
    <string name="color">Color</string>
    <string name="mileage">Mileage (miles)</string>
    <string name="miles">miles</string>
    <string name="problem">Problem</string>
    <string name="car_condition">Car Condition</string>
    <string name="car_brand">Car Brand : </string>
    <string name="car_model">Model : </string>
    <string name="car_problem">Car Problem</string>
    <string name="service_repair">Maintenance</string>
    <string name="service_modify">Modifications</string>
    <string name="repair_services">Repair Services</string>
    <string name="both">All</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="garage">Garage</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="more">More</string>
    <string name="sign_up">Registration</string>
    <string name="_91">+91</string>
    <string name="confirm_password">Confirm password</string>
    <string name="buyer">Buyer</string>
    <string name="already_have_account">Already have account? Sign in</string>
</resources>