<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/_5sdp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@mipmap/loginlogo" />


        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/_10sdp">

            <AutoCompleteTextView
                android:id="@+id/edtMobileNumber"
                style="@style/EditText"
                android:hint="@string/mobile_number"
                android:fontFamily="@font/poppins_regular"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/_10sdp">

            <AutoCompleteTextView
                android:id="@+id/edtPassword"
                style="@style/EditText"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtForgotPassword"
            style="@style/TextView"
            android:layout_gravity="right"
            android:background="@drawable/ripple"
            android:padding="@dimen/_10sdp"
            android:text="@string/forget_pin"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/hint_color" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Button"
            android:fontFamily="@font/poppins_regular"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:layout_gravity="right"
                android:background="@drawable/ripple"
                android:padding="@dimen/_10sdp"
                android:text="@string/not_registered_please"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/hint_color" />

            <TextView
                android:id="@+id/txtSignUp"
                style="@style/TextView"
                android:layout_gravity="right"
                android:background="@drawable/ripple"
                android:padding="@dimen/_10sdp"
                android:text=" SignUp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/poppins_medium" />

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>