<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_margin="10dp"
        android:orientation="vertical">

        <com.spectre.customView.CustomTextView
            android:id="@+id/txt_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:drawableRight="@mipmap/grey_cross"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:edittextfont="Poppins-Medium.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_main"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/service_repair"
                    android:textSize="14sp"
                    app:buttonTint="@color/colorAccent" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_repair"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/service_modify"
                    android:textSize="14sp"
                    app:buttonTint="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_repair_service"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/repair_services"
                    android:textSize="14sp"
                    app:buttonTint="@color/colorAccent" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_both"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/both"
                    android:textSize="14sp"
                    app:buttonTint="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.spectre.customView.CustomRayMaterialTextView
                android:id="@+id/btn_garage_reset"
                style="@style/splashPurpleRipple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/purple_round_solid_rectangle"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/Reset"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:visibility="visible"
                app:edittextfont="Poppins-Medium.ttf" />

            <com.spectre.customView.CustomRayMaterialTextView
                android:id="@+id/btn_garage_done"
                style="@style/splashRipple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/pink_round_solid_rectangle"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/Done"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:visibility="visible"
                app:edittextfont="Poppins-Medium.ttf" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:id="@+id/ll_spinno"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"></LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>